fixed image layout problem in style2.css

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -33,6 +33,7 @@ figcaption {
      position: relative;
      top: 0;
      left: 0;
+     display: inline-block;
  }
 
  /* contact.html */
